# democafa_package

./: .gitignore  README.md  democafaenv.yaml  pyproject.toml  requirements.txt  setup.py
democafa/: config.py  config.yaml  main.py
democafa.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
democafa/baselines/: README_docker.md  blast.py  blast_chunks.py  blast_tsv_input.py  goa_nonexp.py  naive.py  prott5.py  prott5_chunks.py  tsv_to_csv.py
democafa/baselines/blast_container/: Dockerfile  README.md  blast_chunks.py  blast_chunks_optimized.py  blast_main.py  config.yaml  ontology.py  requirements.txt  retrieve_terms.py  (+1 more)
democafa/datacollection/: __init__.py  compare_fasta.py  create_test_set.py  create_toy_dataset.sh  create_train_set.py  download_fasta_by_taxon.py  filter_gaf.py  propagate_and_ia.py  remove_subcell_annt.py  retrieve_new_annotations.py  retrieve_sequences.py  retrieve_terms.py
democafa/groundtruth/: __init__.py  classify_ground_truth.py  leaderboard_score.py  plot_cafa6_results.py  process_ground_truth.py  retrieve_ground_truth.sh
democafa/predictors/: blast.py  goa_nonexp.py  naive.py
democafa/utils/: compare_tsv.py  constants.py  dask_write.py  download_raw_files.sh  ia.py  ontology.py  performance.py  run_blast.sh  run_prott5.sh  run_retrieve_terms.sh  text_parser.py  visualize_dataset.py
tests/: create_test_data.sh  create_test_gaf.py
tests/test_data/: IA.txt  goa_uniprot_selected.gaf  test_superset_all.2025.03.fasta  train_sequences.2025.03.fasta  train_taxonomy.2025.03.tsv  train_terms_selected.tsv  train_terms_selected_propagated.tsv
(+27 files in other folders)
