[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "democafa"
version = "0.1.0"
description = "A CAFA implementation for protein function prediction"
authors = [
    { name = "An Phan", email = "ahphan@iastate.edu" }
]
dependencies = [
    "numpy",
    "scipy",
    "pandas"
]

[tool.setuptools.packages.find]
include = ["democafa*"]

